--- a/styles/main.css
+++ b/styles/main.css
@@ -192,7 +192,7 @@ span[class~="sr-only"] {
   transform: translateX(0);
 }
 
-.nav-med-blue > .logo{ 
+.nav-med-blue a > .logo{ 
   width: 12rem;
   padding-top: 1.2rem;
 }
