Update to mobile nav hover state fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -5,9 +5,11 @@
 :root{
   --grey-100: #EAECEF; 
   --grey-200: #dee2e6;
+  --lt-blue: #c9def5;
   --lt-blue-100: #93bdea;
   --lt-blue-200:#6981B5;
   --med-blue: #526fa7;  
+  --med-blue-100:#758cb9;
   --dark-blue-300: #385876;
   --dark-blue-500: #1A3651;
   --teal-100:#77D4C5;
@@ -98,7 +100,7 @@ body.main{
   position: relative;
 }
 
-body.main :focus-visible{
+body.main:focus-visible{
   outline: 1px dashed var(--purple);
 }
 
@@ -134,7 +136,7 @@ span[class~="sr-only"] {
   position: fixed;
   top: 1.875rem;
   left: 2.5rem;
-  color: var(--lt-blue-100);
+  color: var(--med-blue);
   z-index: 100;
   transition: color 200ms ease-in;
 }
@@ -145,14 +147,15 @@ span[class~="sr-only"] {
   left: 2.5rem;
   z-index: 100;
   color: var(--lt-blue-100);
+  transition: color 0.3s ease-in-out;
 }
 
 .open-btn:hover{
-  color: var(--med-blue);
+  color: var(--med-blue-100);
 }
 
 .open-btn-dk-bg:hover{
-  color: var(--med-blue);
+  color: var(--lt-blue);
 }
 
 .close-btn{
