--- a/styles/journal.css
+++ b/styles/journal.css
@@ -18,3 +18,12 @@
   min-height: 100%;
   max-height: 100%;
 }
+
+section{
+  padding: 2rem 0 5rem 0;
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
