--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -21,27 +21,6 @@ nav.explore-nav{
   z-index: -100;
 }
 
-.hex-pattern{
-  position: absolute;
-  height: 100vh;
-  width: 100%;
-  top: 0;
-  z-index: -100;
-  filter: alpha(opacity=50);
-  opacity: 0.05;
-  --s: 17px; /* control the size */
-  --c:#0000,#1a3651 .5deg 119.5deg,#0000 120deg;
-  --g1:conic-gradient(from  60deg at 56.25% calc(425%/6),var(--c));
-  --g2:conic-gradient(from 180deg at 43.75% calc(425%/6),var(--c));
-  --g3:conic-gradient(from -60deg at 50%   calc(175%/12),var(--c));
-  background:
-    var(--g1),var(--g1) var(--s) calc(1.73*var(--s)),
-    var(--g2),var(--g2) var(--s) calc(1.73*var(--s)),
-    var(--g3) var(--s) 0,var(--g3) 0 calc(1.73*var(--s)) 
-    #93bdea;
-  background-size: calc(2*var(--s)) calc(3.46*var(--s));
-}
-
 .top-blue h1{
   font-size: 2.6rem;
   color: var(--grey-100);
@@ -51,6 +30,7 @@ nav.explore-nav{
   width: 60%;
 }
 
+/* Fade In for Media Icons */
 .fade-in {
   animation: fadeIn ease 2s;
   -webkit-animation: fadeIn ease 2s;
@@ -100,10 +80,8 @@ nav.explore-nav{
   transition: opacity 1s ease-in-out;
 }
 
-#video-section{
+.video-section{
   margin-top: 4rem;
-  margin-left: 2rem;
-  margin-right: 2rem;
   position: relative;
 }
 
@@ -214,7 +192,7 @@ svg.chevron-left{
   grid-template-rows: min-content;
   /* grid-auto-columns: 100%; */
   gap: var(--_spacer);
-  margin: 0 0 1rem 0;
+  margin: 0 0 0.5rem 0;
   padding: 0 0 1.7rem 0;
   background: var(--dark-blue-500);
   color: var(--grey-100);
