--- a/styles/main.css
+++ b/styles/main.css
@@ -69,8 +69,8 @@ h4 {font-size: 1.563rem;}
 
 p{
   display: block;
-  font-size: 1.2rem;
-  line-height: 1.8rem;
+  font-size: 1.3rem;
+  line-height: 1.7;
   padding: 1rem 0;
   letter-spacing: 0.1px;
 }
