--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -264,7 +264,8 @@ svg.chevron-left{
 /* End Media Scroller */
 
 .section-intro-content{
-  margin: 0 4rem;
+  width:85%;
+  margin: 0 auto;
 }
 
 .design-section{
