TODO added for navigation arrow

--- a/styles/main.css
+++ b/styles/main.css
@@ -145,6 +145,8 @@ section{
   margin-left: 2rem;
   margin-right: 2rem;
 }
+
+/* TODO: add in arrow for navigation to top when not in mobile view */
 /* End of General Styling */
 
 /* Mobile Nav */
