--- a/styles/journal.css
+++ b/styles/journal.css
@@ -39,7 +39,7 @@ section{
 
 .blog-article-card h2{
   font-family: var(--body-text);
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   font-weight: 700;
   line-height: 1.375;
   margin:0;
@@ -52,4 +52,24 @@ section{
 .blog-article-card-author{
   color: rgb(63 63 70);
   font-weight: 600;
+  font-size: 1.15rem;
+  margin: 0 1rem;
+}
+
+.blog-article-info{
+  display:flex;
+  flex-wrap: wrap;
+  align-items: center;
+  flex-direction: row;
+  font-size:.875rem;
+  line-height: 1.25rem;
+  color: rgb(113 113 112);
+  margin: 0.3rem 1rem;
+}
+
+.read-icon{
+  height: 1rem;
+  width: 1rem;
+  fill: currentColor;
+  margin-right: .5rem;
 }
