--- a/styles/journal.css
+++ b/styles/journal.css
@@ -13,7 +13,7 @@ section{
   padding: 2.5rem 3rem;
   /* margin-left:auto;
   margin-right: auto; */
-  gap: 2rem;
+  gap: 2.5rem;
   max-width: 1280px;
   width:100%;
 }
@@ -30,7 +30,7 @@ section{
 
 .blog-article-image{
   width: 100%;
-  max-width: 350px;
+  /* max-width: 350px; */
   height: auto;
   border-radius: .5rem;
   border: 1px solid #e5e7eb;
