--- a/styles/services.css
+++ b/styles/services.css
@@ -166,11 +166,11 @@ section h3.service-card-title {
   flex-direction: column;
   justify-content: space-around;
   flex: 1;
-  flex-basis: 375px;
 }
 
 .service-card-text h3{
   margin: 0;
+  font-size: 1.653rem;
 }
 
 .service-card-text p {
@@ -216,7 +216,15 @@ a.view-more:hover{
   /* background-image: linear-gradient(90deg, rgba(147,189,234,1) 0%, rgba(82,111,167,1) 59%); */
 }
 
-
+@media (min-width: 768px) and (max-width: 1022px) {
+  .service-card{
+    display:flex;
+  }
+  .service-card-title{
+    align-self: center;
+  }
+}
+  
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
   .top-blue{
