--- a/styles/services.css
+++ b/styles/services.css
@@ -5,6 +5,7 @@
 .service-section-title{
   font-size: 3rem;
   margin:3.6rem 0rem 1rem;
+  padding-top:1rem;
 }
 
 .box-shadow-right{
@@ -115,10 +116,14 @@ nav.explore-nav{
 
 /* Services Listed Section */
 
-/* Example with a border around each service  */
+.services-info{
+  margin:0;
+  background-color: var(--lt-blue);
+  padding-bottom: 2rem;
+}
 
 .service-section{
-  margin: 0 auto;
+  margin: 0 2rem;
   position: relative;
   padding: 2rem 0;
   display: flex;
@@ -132,7 +137,7 @@ nav.explore-nav{
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
-  border: 1px solid #e2e8f0;
+  border: 1px solid var(--dark-blue-300);
   border-radius: .5rem;
   padding: 2.4rem;
   gap: 1.8rem;
@@ -155,9 +160,8 @@ section h3.service-card-title {
   width: 100%;
   height: 5px;
   transform-origin: bottom;
-  background: var(--lt-blue-100);
+  background: var(--med-blue-100);
   bottom: -12px;
-  z-index: -1;
   transform: skew(-20deg) rotate(var(--rotate)) scaleX(var(--scaleX));
 }
 
