--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -275,8 +275,14 @@ svg.chevron-left{
 /* Before and After Examples  */
 .before-after-container{
   display: flex;
-  justify-content: center;
+  justify-content:center;
   gap: 1rem;
+  margin: 0 auto;
+  background-color:var(--lt-blue-100);
+  border-radius: 1rem;
+  padding: 1.2rem;
+  width: 85%;
+  max-width:1500px;
 }
 
 .before-section, .after-section{
