--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -279,7 +279,7 @@ svg.chevron-left{
   justify-content:center;
   gap: 1rem;
   margin: 0 auto;
-  background-color:var(--lt-blue-100);
+  background-color:var(--lt-blue);
   border-radius: 1rem;
   padding: 1.2rem;
   width: 85%;
