--- a/styles/services.css
+++ b/styles/services.css
@@ -118,7 +118,7 @@ nav.explore-nav{
 
 .services-info{
   margin:0;
-  background-color: var(--lt-blue);
+  background-color: var(--lt-blue-100);
   padding-bottom: 2rem;
 }
 
@@ -216,7 +216,7 @@ a.view-more:hover{
   /* box-shadow: none; */
   background-position: 100% 0;
   transition: all 0.4s ease;
-  /* background-color: var(--lt-blue); */
+  /* background-color: var(--lt-blue-100); */
   /* background-image: linear-gradient(90deg, rgba(147,189,234,1) 0%, rgba(82,111,167,1) 59%); */
 }
 
